--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.34.3",
+    "@fontsource-variable/eb-garamond": "^5.2.5",
+    "@fontsource/amiri-quran": "^5.2.7",
+    "@fontsource/eb-garamond": "^5.2.5",
     "astro": "^5.6.1",
     "sharp": "^0.32.5"
   }
